plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.5'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // OkHttp
    implementation 'com.squareup.okhttp3:okhttp:4.9.1'

    // Gson
    implementation 'com.google.code.gson:gson:2.8.6'

    //ENCRIPTACION
    implementation 'org.bouncycastle:bcprov-jdk15on:1.68'
    //MERCADO PAGO
    implementation 'com.mercadopago:sdk-java:2.1.24'
    // SPRING BOOT OAUTH2 RESOURCE SERVER
    // OJO ESTO HACE QUE TE CIERRE EL SWAGGER CON USUARIO Y CONTRASEÑA
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // SPRING BOOT DATA JPA
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // SPRING BOOT WEB
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // LOMBOK
    compileOnly 'org.projectlombok:lombok'

    // SPRING BOOT DEVTOOLS
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // MYSQL CONNECTOR
    runtimeOnly 'com.mysql:mysql-connector-j'

    // LOMBOK AND MAPSTRUCT PROCESSOR
    annotationProcessor 'org.projectlombok:lombok', 'org.mapstruct:mapstruct-processor:1.5.5.Final'

    // SPRING BOOT TEST
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    // MAPSTRUCT
    implementation 'org.mapstruct:mapstruct:1.5.5.Final'

    // JSON
    implementation 'org.json:json:20210307'

    // CLOUDINARY
    implementation 'com.cloudinary:cloudinary-http44:1.36.0'
    implementation 'com.cloudinary:cloudinary-taglib:1.36.0'

    // DOTENV-JAVA
    implementation 'io.github.cdimascio:dotenv-java:2.2.4'

    // H2 DATABASE
    runtimeOnly 'com.h2database:h2'

    // OPEN API
    implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.1.0'

    // HIBERNATE ENVERS
    implementation 'org.hibernate.orm:hibernate-envers:6.4.4.Final'
}


tasks.named('test') {
    useJUnitPlatform()
}
